# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2005 Gentoo Technologies, Inc.

# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.405 2005/10/02 21:46:52 agaffney Exp $

*GLI-0.2 (4 Aug 2005)

  2 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIUtility:
  removed rot13ify()

  1 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/gliserv.py:
  allow for param to be passed multiple times in GET
  no XMLRPC functions return None
  modify POST request parsing to only create a list if needed
  fix GET request parsing so the list creation for multiple values works
  src/net/client/gliclient.py:
  various typo and type mismatch fixes
  exit after exception

  30 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/client/gliclient.py:
  initial commit
  pass MAC to XMLRPC functions
  src/net/server/GLIServerProfile.py:
  rename GLIClientsProfiles to GLIServerProfile

  29 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/gliserv.py:
  now handles POST requests
  move majority of request handling code to common_handler() to reduce code
  duplication
  profile loading
  client reg via XMLRPC goes into SharedInfo()
  /showclients redesign
  template fixes
  allow handler functions to add/change headers
  save profile

  28 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/GLIClientsProfiles.py:
  initial commit
  src/net/server/template.html:
  initial commit
  src/net/server/gliserv.py:
  add template mojo

  26 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/gliserv.py:
  XMLRPC mojo

  22 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIArchitectureTemplate.py:
  add code in _edit_config() to comment line where variable is defined
  previously
  insert new line under previous definition of variable if it exists
  small _edit_config() cleanup
  src/GLIStorageDevice.py:
  add clear_partitions() function
  new sizes for recommended partition layout